--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "gate-agent",
 	"version": "0.0.0",
 	"author": "Tim Hall <tim.hall.engr@gmail.com>",
+	"description": "Node.js Agent with HTTP_PROXY, HTTP_PROXY, and NO_PROXY support for node-fetch, got, and others",
 	"license": "MIT",
 	"repository": "https://github.com/timhall/gate-agent.git",
 	"main": "dist/gate-agent.js",
