feat: initial implementation

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"description": "Node.js Agent with HTTP_PROXY, HTTP_PROXY, and NO_PROXY support for node-fetch, got, and others",
 	"license": "MIT",
 	"repository": "https://github.com/timhall/gate-agent.git",
-	"main": "dist/gate-agent.js",
-	"types": "dist/gate-agent.d.ts",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
 	"keywords": [
 		"proxy",
 		"agent",
@@ -20,9 +20,16 @@
 		"typecheck": "tsc --noEmit",
 		"format": "prettier --write \"src/**/*.ts\""
 	},
-	"dependencies": {},
+	"dependencies": {
+		"agent-base": "^6.0.1",
+		"debug": "^4.1.1",
+		"http-proxy-agent": "^4.0.1",
+		"https-proxy-agent": "^5.0.0",
+		"match-url-wildcard": "0.0.4"
+	},
 	"peerDependencies": {},
 	"devDependencies": {
+		"@types/debug": "^4.1.5",
 		"@types/jest": "^26.0.10",
 		"@types/node": "^14.6.0",
 		"jest": "^26.4.2",
