--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
 		"moduleResolution": "node",
 		"esModuleInterop": true,
 		"skipLibCheck": true,
+		"declaration": true,
+		"sourceMap": true,
 		"outDir": "dist"
 	},
 	"include": ["src/**/*"],
