--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,7 @@
 {
 	"compilerOptions": {
 		"strict": true,
-		"lib": [
-			"es2019",
-			"es2020.bigint",
-			"es2020.string",
-			"es2020.symbol.wellknown"
-		],
+		"lib": ["es2020"],
 		"module": "es2015",
 		"target": "es2019",
 		"moduleResolution": "node",
